--- a/00-html-css/assets/css/styles.css
+++ b/00-html-css/assets/css/styles.css
@@ -40,7 +40,7 @@
   font-display: swap;
   font-weight: 100 900;
   src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 
@@ -83,7 +83,7 @@ h1 {
   text-wrap: balance;
 }
 
-h1 + p {
+h1+p {
   text-wrap: balance;
   margin-bottom: 2rem
 }
@@ -103,7 +103,9 @@ header {
     font-weight: 700;
     color: var(--text-primary);
   }
+
 }
+
 
 /* Navegación del header a otras páginas */
 nav {
@@ -117,7 +119,8 @@ nav {
     transition: color 0.2s;
     font-weight: 500;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       color: var(--primary);
       outline: none;
     }
@@ -137,8 +140,31 @@ header div a {
   /* TODO */
 }
 
+.empleos header div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.empleos header div>a:nth-child(2) {
+  border-radius: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+
+  img {
+    border-radius: 50%;
+    max-width: 40px;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+  }
+}
+
+
 /* Hero */
-main > section:nth-child(1) {
+main>section:nth-child(1) {
   height: 500px;
   text-align: center;
   display: flex;
@@ -150,7 +176,7 @@ main > section:nth-child(1) {
     padding-top: 36px;
   }
 
-  & > img {
+  &>img {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -162,15 +188,28 @@ main > section:nth-child(1) {
   }
 }
 
+.empleos main>section:nth-child(1) {
+  height: auto;
+}
+
 /* Formulario de Búsqueda */
 form {
   max-width: 42rem;
   width: 100%;
   margin: 0 auto;
   padding-inline: 1rem;
+  /* display: flex;
+  align-items: center;
+  border-radius: 10px;
+  background-color: var(--card-bg);
+  padding: 8px; */
 }
 
-form > div {
+.empleos form {
+  max-width: 72rem;
+}
+
+form>div {
   display: flex;
   align-items: center;
   background-color: var(--input-bg);
@@ -178,6 +217,23 @@ form > div {
   box-shadow: 0 10px 15px -3px var(--shadow);
   padding: 0.5rem;
   gap: 0.5rem;
+}
+
+form>div:nth-child(2) {
+  background-color: transparent;
+  box-shadow: none;
+  margin-top: .5rem;
+  padding: 0.5rem 0;
+
+  select {
+    background-color: var(--input-bg);
+    border-radius: 0.5rem;
+    border: transparent;
+    color: var(--text-primary);
+    opacity: .75;
+    padding: 10px;
+    box-shadow: 0 5px 10px -3px var(--shadow);
+  }
 }
 
 form span {
@@ -224,13 +280,96 @@ form button[type="submit"]:focus {
   outline-offset: 2px;
 }
 
+main>section:nth-child(2) {
+  padding-top: 2.2rem;
+
+  &>header {
+    gap: 2px;
+    flex-direction: column;
+
+    h2 {
+      margin-bottom: 0.5rem;
+      font-size: 2rem;
+    }
+
+  }
+
+  &>div {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    gap: 10px;
+    justify-content: center;
+  }
+
+  &>div>* {
+    border-radius: 100px;
+    background-color: var(--card-bg);
+    padding: 10px 20px;
+  }
+}
+
+.empleos main>section:nth-child(2) {
+  padding-left: 7rem;
+  padding-right: 7rem;
+  &>header {
+    padding: 0;
+    border-bottom: transparent;
+    align-items: start;
+
+    h2 {
+      margin-bottom: 0.5rem;
+      font-size: 1.8rem;
+    
+    }
+
+  }
+
+  &>div {
+    padding: 0;
+    article {
+      border-radius: .5rem;
+      border: 2px solid var(--card-bg);
+      background-color: transparent;
+      padding: 20px 15px;
+      display: flex;
+      box-shadow: none;
+      margin-bottom: 0;
+
+      h3 {
+        font-size: 1.2rem;
+      }
+
+      button {
+        padding: 0.75rem 1.5rem;
+        border-radius: 0.5rem;
+        background-color: var(--primary-hover);
+        color: white;
+        font-weight: 700;
+        border: none;
+        cursor: pointer;
+        transition: background-color 0.2s;
+        font-family: inherit;
+        font-size: 1rem;
+        white-space: nowrap;
+      }
+
+      button:hover {
+        background-color: var(--primary-dark);
+      }
+    }
+  }
+}
+
+
 /* Features Section */
-main > section:nth-child(2) {
+main>section:nth-child(3) {
   padding-inline: 1rem;
   background-color: var(--background);
-  padding-top: 2rem;
+  padding-top: 2.2rem;
+  padding-bottom: 2.2rem;
 
-  & > header {
+  &>header {
     gap: 2px;
     flex-direction: column;
 
@@ -243,20 +382,20 @@ main > section:nth-child(2) {
     }
   }
 
-  & > div {
+  &>div {
     max-width: 1280px;
     margin: 0 auto;
   }
 }
 
-main > section:nth-child(2) h2 {
+main>section:nth-child(3) h2 {
   font-size: 1.875rem;
   font-weight: 700;
   color: var(--text-primary);
   margin-bottom: 1rem;
 }
 
-main > section:nth-child(2) > div > div:first-child > p {
+main>section:nth-child(3)>div>div:first-child>p {
   font-size: 1.125rem;
   color: var(--text-muted);
   max-width: 42rem;
@@ -264,7 +403,7 @@ main > section:nth-child(2) > div > div:first-child > p {
 }
 
 /* Grid de Features */
-main > section:nth-child(2) footer {
+main>section:nth-child(3) footer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 16px
@@ -332,4 +471,55 @@ article {
   h3 {
     font-weight: 500;
   }
+}
+
+.empleos main>section:nth-child(3) {
+  &>nav {
+    flex-direction: column;
+
+    ul {
+      list-style: none;
+      display: flex;
+      padding: 0;
+      margin: 20px 0;
+      justify-content: center;
+
+
+      li {
+        margin: 0 5px;
+
+
+        a {
+          display: block;
+          padding: 8px 15px;
+          text-decoration: none;
+          color: var(--text-primary);
+          opacity: .75;
+          background-color: var(--card-bg);
+          border-radius: 5px;
+          transition: background-color 0.2s, color 0.2s;
+        }
+      }
+    }
+  }
+
+}
+
+.page-link:hover {
+  background-color: #e9ecef;
+  color: #0056b3;
+}
+
+/* Estilo para la página activa */
+.page-item.active .page-link {
+  background-color: var(--primary-light);
+  color: white;
+  border-color: var(--primary-light);
+}
+
+/* Estilo para un botón deshabilitado */
+.page-item.disabled .page-link {
+  color: #6c757d;
+  pointer-events: none;
+  border-color: #dee2e6;
 }
