--- a/00-html-css/assets/css/styles.css
+++ b/00-html-css/assets/css/styles.css
@@ -76,11 +76,20 @@ body {
 
 /* Títulos principales */
 h1 {
-  font-size: 2.25rem;
-  font-weight: 900;
-  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  /* font-weight: 900;
+  margin-bottom: 1rem; */
   line-height: 1.2;
   text-wrap: balance;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  svg {
+    width: 2rem;
+    height: 2rem;
+    color: var(--primary-light);
+  }
 }
 
 h1+p {
@@ -259,7 +268,7 @@ form input[type="text"]::placeholder {
   color: #64748b;
 }
 
-form button[type="submit"] {
+button {
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
   background-color: var(--primary);
@@ -271,14 +280,15 @@ form button[type="submit"] {
   font-family: inherit;
   font-size: 1rem;
   white-space: nowrap;
-}
 
-form button[type="submit"]:hover,
-form button[type="submit"]:focus {
+  &:hover, &:focus {
   background-color: var(--primary-hover);
   outline: 2px solid white;
   outline-offset: 2px;
+  }
 }
+
+
 
 main>section:nth-child(2) {
   padding-top: 2.2rem;
@@ -340,23 +350,7 @@ main>section:nth-child(2) {
         font-size: 1.2rem;
       }
 
-      button {
-        padding: 0.75rem 1.5rem;
-        border-radius: 0.5rem;
-        background-color: var(--primary-hover);
-        color: white;
-        font-weight: 700;
-        border: none;
-        cursor: pointer;
-        transition: background-color 0.2s;
-        font-family: inherit;
-        font-size: 1rem;
-        white-space: nowrap;
-      }
-
-      button:hover {
-        background-color: var(--primary-dark);
-      }
+     
     }
   }
 }
@@ -505,16 +499,17 @@ article {
 
 }
 
-.page-link:hover {
-  background-color: #e9ecef;
-  color: #0056b3;
-}
+
 
 /* Estilo para la página activa */
-.page-item.active .page-link {
+.page-item.active .page-link, .page-item:hover .page-link {
   background-color: var(--primary-light);
   color: white;
   border-color: var(--primary-light);
+}
+
+.page-item.active .page-link {
+  pointer-events: none;
 }
 
 /* Estilo para un botón deshabilitado */
