--- a/01-javascript/assets/css/styles.css
+++ b/01-javascript/assets/css/styles.css
@@ -242,6 +242,16 @@ form>div:nth-child(2) {
     opacity: .75;
     padding: 10px;
     box-shadow: 0 5px 10px -3px var(--shadow);
+
+     &:hover {
+    background-color: var(--primary-hover);
+    color: white;
+  }
+
+  &:focus {
+    outline: 2px solid #1173d4;
+    outline-offset: 2px;
+  }
   }
 }
 
@@ -348,11 +358,15 @@ main>section:nth-child(2) {
       display: flex;
       box-shadow: none;
       margin-bottom: 0;
+      cursor: pointer;
 
       h3 {
         font-size: 1.2rem;
       }
 
+      &.is-hidden {
+        display: none;
+      }
 
     }
   }
