Se agregó la lógica del buscador, se corrigió el filtro de tecnología ya que no mostraba correctamente los trabajos con más de una tecnología aunque el filtro coincidiera con uno de ellos. Se agregó el componente web avatar. Se implementó parte de la lógica de la paginación que muestra tres resultados por página y genera dinámicamente los botones del paginador. No funciona el cambio de página ni se muestra la flecha para avanzar

--- a/01-javascript/assets/css/styles.css
+++ b/01-javascript/assets/css/styles.css
@@ -234,6 +234,7 @@ form>div:nth-child(2) {
   margin-top: .5rem;
   padding: 0.5rem 0;
 
+
   select {
     background-color: var(--input-bg);
     border-radius: 0.5rem;
@@ -243,15 +244,15 @@ form>div:nth-child(2) {
     padding: 10px;
     box-shadow: 0 5px 10px -3px var(--shadow);
 
-     &:hover {
-    background-color: var(--primary-hover);
-    color: white;
-  }
+    &:hover {
+      background-color: var(--primary-hover);
+      color: white;
+    }
 
-  &:focus {
-    outline: 2px solid #1173d4;
-    outline-offset: 2px;
-  }
+    &:focus {
+      outline: 2px solid #1173d4;
+      outline-offset: 2px;
+    }
   }
 }
 
@@ -311,6 +312,10 @@ main>section:nth-child(2) {
     h2 {
       margin-bottom: 0.5rem;
       font-size: 2rem;
+    }
+
+    .resultados-conteo {
+      margin-bottom: .5rem;
     }
 
   }
@@ -519,8 +524,12 @@ article {
 
 
 /* Estilo para la página activa */
-.page-item.active .page-link,
-.page-item:hover .page-link {
+.page-item {
+  margin: .2rem;
+}
+
+.page-item.active,
+.page-item:hover {
   background-color: var(--primary-light);
   color: white;
   border-color: var(--primary-light);
@@ -557,6 +566,7 @@ article {
     a {
       color: var(--primary-light);
     }
+
     &::before {
       padding: 0 .5rem;
       color: var(--primary-dark);
@@ -576,7 +586,7 @@ article {
 }
 
 .detalle-empleo>section:nth-child(1) {
-   h1 {
+  h1 {
     margin-bottom: 5rem;
-   }
+  }
 }
